Update Dockerfile and examples for Java GC log visualization and OpenMetrics integration